--- a/reading-journal-01.ipynb
+++ b/reading-journal-01.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "90 min"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,7 +42,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,7 +56,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,8 +71,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Yes, but you cite it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Chapter 1\n",
     "Note: the exercise numbers below match up with the reading for ease of cross referencing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python interpreter program that reads and executes python code\n",
+    "\n",
+    "Last line = prompt\n",
+    "\n",
+    "value = one of basic things code works with\n",
+    " different types such as integer, floating point, and string\n",
+    " class  is used as a type of category\n",
+    "\n",
+    "natural language = used for normal speaking\n",
+    "formal = developed for a specific purpose \n",
+    " figure out syntax rules, in both tokens (basic) and structure(figuring it out is called parsing)\n",
+    " \n",
+    " diff include : ambiguity formal (lots) natural (almost none); redundancy: formal(not much) natural (a lot); literalness : formal (all) natural(not as much)\n",
+    " \n",
+    " kinda like prose vs poetry\n",
+    " \n",
+    " debugging= finding programming errors (bugs)\n",
+    " \n",
+    " \n"
    ]
   },
   {
@@ -109,12 +147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2562"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(42*60)+42"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,12 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.211180124223602"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10/1.61"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,12 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average pace is  6.0 minutes and  52.48200000000003 seconds\n",
+      "average speed is 8.727653570337614 mph\n"
+     ]
+    }
+   ],
+   "source": [
+    "seconds_ran = (42*60)+42;\n",
+    "miles_ran = 10/1.61;\n",
+    "average_pace_seconds = seconds_ran/miles_ran;\n",
+    "average_pace_remainder = average_pace_seconds%60;\n",
+    "average_pace_min = (average_pace_seconds-average_pace_remainder)/60;\n",
+    "print('average pace is ',average_pace_min,'minutes and ', average_pace_remainder, 'seconds')\n",
+    "\n",
+    "average_speed = miles_ran/(seconds_ran/3600);\n",
+    "print('average speed is', average_speed,'mph')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +239,49 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I would say that the python code in the jupyter notebook would be script mode as you can write as much code as you would like, and then it would run the entire thing when you tell it to."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "assign statement creates new var and gives value\n",
+    "\n",
+    "state diagram writes name w/ arrow pointing to value\n",
+    "\n",
+    "variable names - make sure they are good, representative, and follow syntax rules (and are not any keywords- such as and class if as is while...)\n",
+    "\n",
+    "expression = comb of values variable and operators\n",
+    "\n",
+    "statement = code that has an effect- like creating variable or displaying value\n",
+    "\n",
+    "executing code = doing whatever the code says\n",
+    "\n",
+    "interactive mode = interact directly with interpreter;\n",
+    "other option is to save code in file called scrpit and run in\n",
+    "script mode to execute.\n",
+    "\n",
+    "order of operations remains the same- pemdas\n",
+    "\n",
+    "\n",
+    "strings : no mathematical operations on strings except:\n",
+    "\n",
+    "use + for string concatination - joining strings together\n",
+    "use * to repeat a string ex 'spam'*3 = 'spamspamspam'\n",
+    "\n",
+    "comments = notes to explain what code is doing&/or why use #\n",
+    "\n",
+    "debugging: \n",
+    "    syntax error: structure of program and rules about said structure - if syntax error, python displays error message and quites\n",
+    "    \n",
+    "     runtime error: does not appear until after program has started running. also called exceptions b/c indicate that something execeptional/bad has occurred.\n",
+    "     \n",
+    "     semantic error: related to meaning\n",
+    "     will run w/o generating error, but will not do the right thing.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,12 +296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to literal (<ipython-input-1-f0c37ed646fc>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-f0c37ed646fc>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    42 = n\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
+     ]
+    }
+   ],
    "source": [
     "42 = n"
    ]
@@ -205,19 +332,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "x = y = 1"
+    "x = y = 1\n",
+    "print(x)\n",
+    "print(y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "correct"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,7 +378,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "semantic error"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,7 +403,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "syntax error"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,13 +427,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "volume is 523.3333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "volume = 4/3*3.14*5**3\n",
+    "print('volume is', volume)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,12 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total wholesale cost is 945.4499999999999 dollars\n"
+     ]
+    }
+   ],
+   "source": [
+    "cost = 60*(24.95*.6+.75)+2.25\n",
+    "print('total wholesale cost is', cost, 'dollars')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,18 +479,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you would get home by 7.0 : 30.0 and 6 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_time_seconds = 15+12*3+15 + 60*(8+3*7+8+52);\n",
+    "remainder_nothours= run_time_seconds%3600;\n",
+    "hours = (run_time_seconds-remainder_nothours)/3600 + 6;\n",
+    "remainder_notminutes = remainder_nothours%60;\n",
+    "minutes = (remainder_nothours-remainder_notminutes)/60;\n",
+    "seconds = remainder_notminutes;\n",
+    "print('you would get home by', hours,':',minutes,'and',seconds, 'seconds')\n",
+    "\n",
+    "time_minutes = 52+8+7*3+8;"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "function = named sequence of statements that perform a computation;\n",
+    " when define - specify name and sequence\n",
+    " later call (do a function call) to use/ do the function\n",
+    " \n",
+    "for function call ex asdf\n",
+    "argument= input; asdf = function name; return_value = output\n",
+    "return_value = asdf(argument);\n",
+    "\n",
+    "ex of function int() converts to integer, float() to floating point, str() to string;\n",
+    "\n",
+    "#### Module = file that contains collection of related functions;\n",
+    "    to use, import w/ import statement\n",
+    "    ex: import math\n",
+    "    creates a module object named math\n",
+    "    \n",
+    "    to access one of functions, name_module.name_function\n",
+    "        this is called dot notation\n",
+    "#### Composition - combining all the different tools- is important and useful!\n",
+    "\n",
+    "function definition specifies name of new function and sequence of statements that run when function is called.\n",
+    "\n",
+    "header = first line of function definition\n",
+    "body = rest of function\n",
+    "\n",
+    "function object = what is created when you define an object;\n",
+    "\n",
+    "must define stuff before you use it\n",
+    "\n",
+    "#### Flow of execution - order statements run in - YOU SHOULD KNOW THIS\n",
+    "because functions can call other functions, sometimes it is better to read code from the flow of execution instead of from top- bottom;\n",
+    " \n",
+    "#### parameters and arguments\n",
+    "inside function- arguments are assigned to variables called parameters\n",
+    "\n",
+    "can assign a variable as an arguement\n",
+    "\n",
+    "#### When you create variable inside a function, it is LOCAL - only exists inside the function\n",
+    "parameters are also local\n",
+    "\n",
+    "#### Stack diagrams are useful to keep track of which variables can be used where\n",
+    "show value and function each var belong to\n",
+    "\n",
+    "Frame = one frame represents each function - it is a box w/ name of function beside it, and params/var of function inside it\n",
+    "\n",
+    "arranged in stack indicating which function called which... etc\n",
+    "\n",
+    "Traceback = list of functions shown in error message if error occurs during function call\n",
+    "\n",
+    "#### Fruitful functions - return results\n",
+    "\n",
+    "#### Void functions - perform an action but do not return a value\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Functions are awesome and useful\n",
+    " allows you to name a group of statements - making it easier to read and debug\n",
+    " \n",
+    " make smaller by eliminating repetitive code- easier to change as well\n",
+    " \n",
+    " allows to debug parts one at a time\n",
+    " \n",
+    " can be reused for many programs\n",
+    " \n",
+    " #### Debugging, ah... debugging"
    ]
   },
   {
@@ -349,12 +596,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                 monty\n"
+     ]
+    }
+   ],
+   "source": [
+    "def right_justify(s):\n",
+    "    spaces = \" \"*(70-len(s))\n",
+    "    result = spaces+s\n",
+    "    print(result)\n",
+    "right_justify('monty')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -399,12 +658,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----+\n",
+      "|    |    |\n",
+      "|    |    |\n",
+      "|    |    |\n",
+      "+----+----+\n",
+      "|    |    |\n",
+      "|    |    |\n",
+      "|    |    |\n",
+      "+----+----+\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_plus ():\n",
+    "    strline = ('+'+('-'*4))*2+'+'\n",
+    "    print(strline)\n",
+    "    \n",
+    "def print_verticle():\n",
+    "    strline = ('|'+(' '*4))*2+'|'\n",
+    "    for i in range(4):\n",
+    "        print(strline)\n",
+    "for i in range(2):\n",
+    "    print_plus()\n",
+    "    print_verticle()\n",
+    "print_plus()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -415,18 +701,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----+----+\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "+----+----+----+\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "+----+----+----+\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "|    |    |    |\n",
+      "+----+----+----+\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_plus ():\n",
+    "    strline = ('+'+('-'*4))*3+'+'\n",
+    "    print(strline)\n",
+    "    \n",
+    "def print_verticle():\n",
+    "    strline = ('|'+(' '*4))*3+'|'\n",
+    "    for i in range(4):\n",
+    "        print(strline)\n",
+    "        \n",
+    "for i in range(3):\n",
+    "    print_plus()\n",
+    "    print_verticle()\n",
+    "print_plus()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Going Beyond - Chapter 5.1 - 5.7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Floor division and modulus\n",
+    "\n",
+    "floor division operator  // divides two numbers and rounds down to an integer\n",
+    "\n",
+    "modulus operator %  divides two numbers and returns the remainder\n",
+    "\n",
+    "#### Booleans\n",
+    "boolean expression - either true or false \n",
+    "(true = 1 (or greater than 1), false = 0)\n",
+    "\n",
+    "relational operators are:\n",
+    "    x is equal to y :  x == y\n",
+    "    x is not equal to y: x !=y\n",
+    "    x is greater than y: x > y\n",
+    "    x is less than y: x < y\n",
+    "    x is greater than or equal to y: x >= y\n",
+    "    x is less than or equal to y: x <= y\n",
+    "    \n",
+    "#### Logical operators\n",
+    "and \n",
+    "or \n",
+    "not\n",
+    "pretty self explanitory\n",
+    "\n",
+    "#### Conditional execution\n",
+    "\n",
+    "conditional statements allow us to check conditions and change behavior of program accordingly\n",
+    "\n",
+    "if statements - boolean after if statement = consition\n",
+    " \n",
+    "header followed by an indented body = compound statements\n",
+    "\n",
+    "can have unlimited # of statements in body, but must have at least one - or just write pass \n",
+    "#### Alternative execution - another way of saying if then statements\n",
+    "\n",
+    "#### Chained conditionals - elif statements- if this, do this, else if (elif) this do this..... else do this. they are checked in order, only first true branch runs\n",
+    "\n",
+    "nested conditionals- conditionals within other conditionals\n",
+    "\n",
+    "#### Recursion - the process of executing a recursive function - a function that calls itself\n",
+    "\n",
+    "return statement exits function\n",
+    "\n",
+    "#### in stack diagrams for recursive functions, bottom of stack where n=0 is base case\n",
+    "\n",
+    "#### Infinite recursion = if recursion never reaches a  base state and keeps on making recursive calls forever, never ending the program\n",
+    "\n",
+    "\n",
+    "#### Keyboard input\n",
+    "\n",
+    "use command asdf = input(\"prompt user what they should put in\\n\")\n",
+    "\n",
+    "\\n represents a newline - special character that causes line break\n"
    ]
   },
   {
@@ -519,7 +899,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3 hours 15 min"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -553,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
