Completed Reading Journal 4

--- a/reading-journal-04.ipynb
+++ b/reading-journal-04.ipynb
@@ -27,6 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### I already took notes on chapter 10 in the previous notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise 10.4 \n",
     "Write a function called `chop` that takes a list, modifies it by removing the first and last elements, and returns `None`.\n",
     "\n",
@@ -35,15 +42,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chop(t):\n",
+    "    del t[0]\n",
+    "    del t[len(t)-1]\n",
+    "    return None\n",
+    "a = [0,2,4,5]\n",
+    "chop (a)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "middle returns a new list, and does not modify the original list\n",
+    "\n",
+    "chop returns nothing, but modifies the original list"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,12 +84,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_anagram(w1,w2):\n",
+    "    if len(w1) != len(w2):\n",
+    "        return False\n",
+    "    else:\n",
+    "        w1_list = list(w1.lower())\n",
+    "        w2_list = list(w2.lower())\n",
+    "        w1_list.sort()\n",
+    "        w2_list.sort()\n",
+    "        \n",
+    "        if w1_list == w2_list:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "print(is_anagram('yeet','eeyt'))\n",
+    "print(is_anagram('yeEt','eeYt'))\n",
+    "print(is_anagram('yyeet','eeyt'))\n",
+    "print(is_anagram('yeat','yeet'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,7 +130,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "ls list contents of current directory\n",
+    "pwd,cd call directory \n",
+    "cp copies files mv move file\n",
+    "rm remove file, rmdir remove directory\n",
+    "sudo superuser\n",
+    "grep searches file for certain word or pattern and prints all lines that match\n",
+    "etc..."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,7 +150,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "if you delete a file, you only can getit back if you have a backup "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +164,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "202 times"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,11 +186,20 @@
     "(4) over 2 hours by a little\n",
     "\n",
     "(5) over 2 hours by a lot\n"
-  ]
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "got split up over time - forget, between one and two hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -145,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
